# PinYinImeDicBuilder

./: CMakeLists.txt  README.md
command/: pinyinime_dictbuilder.cpp
data/: rawdict_utf16_65105_freq.txt  rawdict_utf16_65105_freq.txt.bak  rawdict_utf16_65105_freq.txt.bak2  valid_utf16.txt
include/: dictdef.h
share/: dictbuilder.cpp  dictlist.cpp  dicttrie.cpp  matrixsearch.cpp  ngram.cpp  spellingtrie.cpp
